//! Distributed Computing Support
//!
//! Multi-node inference, federated learning, and edge computing optimizations
//! for TrustformeRS C API.

use crate::error::{TrustformersError, TrustformersResult};
use std::collections::HashMap;
use std::ffi::{CStr, CString};
use std::net::{IpAddr, SocketAddr};
use std::os::raw::{c_char, c_float, c_int, c_uint, c_void};

/// Node role in distributed system
#[repr(C)]
#[derive(Debug, Clone, Copy, PartialEq)]
pub enum NodeRole {
    Coordinator = 0,     // Master/coordinator node
    Worker = 1,          // Worker node for computation
    ParameterServer = 2, // Parameter server for model storage
    EdgeDevice = 3,      // Edge computing device
    Client = 4,          // Client requesting inference
}

/// Communication protocol
#[repr(C)]
#[derive(Debug, Clone, Copy, PartialEq)]
pub enum CommProtocol {
    TCP = 0,
    UDP = 1,
    RDMA = 2,       // Remote Direct Memory Access
    InfiniBand = 3, // High-performance networking
    NCCL = 4,       // NVIDIA Collective Communications Library
    MPI = 5,        // Message Passing Interface
    gRPC = 6,       // Google RPC
    Custom = 7,
}

/// Node information in distributed system
#[repr(C)]
#[derive(Debug, Clone)]
pub struct DistributedNode {
    pub node_id: c_int,
    pub role: NodeRole,
    pub address: [c_char; 256], // IP address or hostname
    pub port: c_int,
    pub protocol: CommProtocol,
    pub compute_capability: c_float, // Relative compute capability (0.0-1.0)
    pub memory_gb: c_float,
    pub bandwidth_mbps: c_float,
    pub latency_ms: c_float,
    pub is_available: bool,
    pub last_heartbeat: u64, // Timestamp
}

/// Distributed inference configuration
#[repr(C)]
#[derive(Debug, Clone)]
pub struct DistributedInferenceConfig {
    pub coordinator_address: [c_char; 256],
    pub coordinator_port: c_int,
    pub num_workers: c_int,
    pub batch_size: c_int,
    pub timeout_ms: c_int,
    pub retry_attempts: c_int,
    pub load_balancing_strategy: LoadBalancingStrategy,
    pub fault_tolerance_enabled: bool,
    pub compression_enabled: bool,
    pub encryption_enabled: bool,
}

/// Load balancing strategies
#[repr(C)]
#[derive(Debug, Clone, Copy, PartialEq)]
pub enum LoadBalancingStrategy {
    RoundRobin = 0,
    WeightedRoundRobin = 1,
    LeastConnections = 2,
    ConsistentHashing = 3,
    CapabilityBased = 4,
    LatencyBased = 5,
}

/// Federated learning configuration
#[repr(C)]
#[derive(Debug, Clone)]
pub struct FederatedLearningConfig {
    pub aggregation_strategy: AggregationStrategy,
    pub num_rounds: c_int,
    pub min_participants: c_int,
    pub max_participants: c_int,
    pub privacy_mechanism: PrivacyMechanism,
    pub differential_privacy_epsilon: c_float,
    pub secure_aggregation_enabled: bool,
    pub client_sampling_rate: c_float,
    pub convergence_threshold: c_float,
}

/// Aggregation strategies for federated learning
#[repr(C)]
#[derive(Debug, Clone, Copy, PartialEq)]
pub enum AggregationStrategy {
    FederatedAveraging = 0, // FedAvg
    FederatedProx = 1,      // FedProx
    SCAFFOLD = 2,           // SCAFFOLD algorithm
    FederatedNova = 3,      // FedNova
    AdaptiveFederated = 4,  // Adaptive methods
    SecureAggregation = 5,  // Cryptographic aggregation
}

/// Privacy mechanisms
#[repr(C)]
#[derive(Debug, Clone, Copy, PartialEq)]
pub enum PrivacyMechanism {
    None = 0,
    DifferentialPrivacy = 1,
    HomomorphicEncryption = 2,
    SecureMultipartyComputation = 3,
    LocalDifferentialPrivacy = 4,
}

/// Edge computing configuration
#[repr(C)]
#[derive(Debug, Clone)]
pub struct EdgeComputingConfig {
    pub edge_node_id: c_int,
    pub cloud_coordinator: [c_char; 256],
    pub local_inference_threshold: c_float, // Confidence threshold for local inference
    pub offload_latency_threshold_ms: c_float,
    pub battery_level_threshold: c_float, // For mobile edge devices
    pub network_bandwidth_threshold_mbps: c_float,
    pub model_partitioning_enabled: bool,
    pub adaptive_batching_enabled: bool,
    pub caching_strategy: EdgeCachingStrategy,
}

/// Edge caching strategies
#[repr(C)]
#[derive(Debug, Clone, Copy, PartialEq)]
pub enum EdgeCachingStrategy {
    NoCache = 0,
    LRU = 1,                // Least Recently Used
    LFU = 2,                // Least Frequently Used
    TTL = 3,                // Time To Live
    Adaptive = 4,           // Adaptive based on usage patterns
    PredictivePrefetch = 5, // Predictive prefetching
}

/// Distributed system manager
pub struct DistributedManager {
    nodes: HashMap<c_int, DistributedNode>,
    current_node: DistributedNode,
    inference_config: Option<DistributedInferenceConfig>,
    federated_config: Option<FederatedLearningConfig>,
    edge_config: Option<EdgeComputingConfig>,
    comm_handle: *mut c_void,
    initialized: bool,
}

impl DistributedManager {
    /// Create a new distributed manager
    pub fn new(node_id: c_int, role: NodeRole) -> TrustformersResult<Self> {
        let current_node = DistributedNode {
            node_id,
            role,
            address: [0; 256],
            port: 0,
            protocol: CommProtocol::TCP,
            compute_capability: 1.0,
            memory_gb: 0.0,
            bandwidth_mbps: 0.0,
            latency_ms: 0.0,
            is_available: true,
            last_heartbeat: 0,
        };

        Ok(Self {
            nodes: HashMap::new(),
            current_node,
            inference_config: None,
            federated_config: None,
            edge_config: None,
            comm_handle: std::ptr::null_mut(),
            initialized: false,
        })
    }

    /// Initialize distributed system
    pub fn initialize(&mut self, bind_address: &str, port: c_int) -> TrustformersResult<()> {
        if self.initialized {
            return Ok(());
        }

        let address_cstring =
            CString::new(bind_address).map_err(|_| TrustformersError::NetworkError)?;

        // Copy address to current node
        let address_bytes = address_cstring.as_bytes();
        let copy_len = std::cmp::min(address_bytes.len(), 255);
        self.current_node.address[..copy_len]
            .copy_from_slice(unsafe { std::mem::transmute(&address_bytes[..copy_len]) });
        self.current_node.port = port;

        // Initialize communication subsystem
        let result = unsafe {
            distributed_comm_initialize(
                address_cstring.as_ptr(),
                port,
                self.current_node.protocol,
                &mut self.comm_handle,
            )
        };

        if result != 0 {
            return Err(TrustformersError::NetworkError);
        }

        self.initialized = true;
        println!(
            "Distributed system initialized: node {} as {:?}",
            self.current_node.node_id, self.current_node.role
        );
        Ok(())
    }

    /// Join distributed network
    pub fn join_network(
        &mut self,
        coordinator_address: &str,
        coordinator_port: c_int,
    ) -> TrustformersResult<()> {
        if !self.initialized {
            return Err(TrustformersError::RuntimeError);
        }

        let coordinator_cstring =
            CString::new(coordinator_address).map_err(|_| TrustformersError::NetworkError)?;

        let result = unsafe {
            distributed_join_network(
                self.comm_handle,
                coordinator_cstring.as_ptr(),
                coordinator_port,
                &self.current_node,
            )
        };

        if result != 0 {
            return Err(TrustformersError::NetworkError);
        }

        Ok(())
    }

    /// Configure distributed inference
    pub fn configure_inference(
        &mut self,
        config: DistributedInferenceConfig,
    ) -> TrustformersResult<()> {
        let result = unsafe { distributed_configure_inference(self.comm_handle, &config) };

        if result != 0 {
            return Err(TrustformersError::ConfigError);
        }

        self.inference_config = Some(config);
        Ok(())
    }

    /// Execute distributed inference
    pub fn execute_distributed_inference(
        &self,
        model_id: c_int,
        input_data: &[c_float],
        output_data: &mut [c_float],
    ) -> TrustformersResult<DistributedInferenceMetrics> {
        if self.inference_config.is_none() {
            return Err(TrustformersError::ConfigError);
        }

        let mut metrics = DistributedInferenceMetrics::default();

        let result = unsafe {
            distributed_execute_inference(
                self.comm_handle,
                model_id,
                input_data.as_ptr(),
                input_data.len(),
                output_data.as_mut_ptr(),
                output_data.len(),
                &mut metrics,
            )
        };

        if result != 0 {
            return Err(TrustformersError::RuntimeError);
        }

        Ok(metrics)
    }

    /// Configure federated learning
    pub fn configure_federated_learning(
        &mut self,
        config: FederatedLearningConfig,
    ) -> TrustformersResult<()> {
        let result = unsafe { federated_configure_learning(self.comm_handle, &config) };

        if result != 0 {
            return Err(TrustformersError::ConfigError);
        }

        self.federated_config = Some(config);
        Ok(())
    }

    /// Start federated learning round
    pub fn start_federated_round(
        &self,
        global_model: &[c_float],
        round_number: c_int,
    ) -> TrustformersResult<FederatedRoundMetrics> {
        if self.federated_config.is_none() {
            return Err(TrustformersError::ConfigError);
        }

        let mut metrics = FederatedRoundMetrics::default();

        let result = unsafe {
            federated_start_round(
                self.comm_handle,
                global_model.as_ptr(),
                global_model.len(),
                round_number,
                &mut metrics,
            )
        };

        if result != 0 {
            return Err(TrustformersError::RuntimeError);
        }

        Ok(metrics)
    }

    /// Configure edge computing
    pub fn configure_edge_computing(
        &mut self,
        config: EdgeComputingConfig,
    ) -> TrustformersResult<()> {
        let result = unsafe { edge_configure_computing(self.comm_handle, &config) };

        if result != 0 {
            return Err(TrustformersError::ConfigError);
        }

        self.edge_config = Some(config);
        Ok(())
    }

    /// Decide inference location (edge vs cloud)
    pub fn decide_inference_location(
        &self,
        input_size: usize,
        model_complexity: c_float,
    ) -> TrustformersResult<InferenceLocation> {
        if self.edge_config.is_none() {
            return Err(TrustformersError::ConfigError);
        }

        let mut location = InferenceLocation::Edge;

        let result = unsafe {
            edge_decide_inference_location(
                self.comm_handle,
                input_size,
                model_complexity,
                &mut location,
            )
        };

        if result != 0 {
            return Err(TrustformersError::RuntimeError);
        }

        Ok(location)
    }

    /// Get network topology
    pub fn get_network_topology(&self) -> TrustformersResult<Vec<DistributedNode>> {
        let mut node_count: c_int = 0;
        let result = unsafe {
            distributed_get_topology(self.comm_handle, std::ptr::null_mut(), &mut node_count)
        };

        if result != 0 || node_count == 0 {
            return Ok(Vec::new());
        }

        let mut nodes = vec![
            DistributedNode {
                node_id: 0,
                role: NodeRole::Worker,
                address: [0; 256],
                port: 0,
                protocol: CommProtocol::TCP,
                compute_capability: 0.0,
                memory_gb: 0.0,
                bandwidth_mbps: 0.0,
                latency_ms: 0.0,
                is_available: false,
                last_heartbeat: 0,
            };
            node_count as usize
        ];

        let final_result = unsafe {
            distributed_get_topology(self.comm_handle, nodes.as_mut_ptr(), &mut node_count)
        };

        if final_result != 0 {
            return Err(TrustformersError::NetworkError);
        }

        Ok(nodes)
    }
}

impl Drop for DistributedManager {
    fn drop(&mut self) {
        if self.initialized && !self.comm_handle.is_null() {
            unsafe {
                distributed_comm_shutdown(self.comm_handle);
            }
        }
    }
}

/// Performance metrics for distributed inference
#[repr(C)]
#[derive(Debug, Default)]
pub struct DistributedInferenceMetrics {
    pub total_latency_ms: c_float,
    pub network_latency_ms: c_float,
    pub compute_latency_ms: c_float,
    pub serialization_latency_ms: c_float,
    pub num_workers_used: c_int,
    pub load_balancing_efficiency: c_float,
    pub network_utilization: c_float,
    pub fault_tolerance_events: c_int,
}

/// Metrics for federated learning rounds
#[repr(C)]
#[derive(Debug, Default)]
pub struct FederatedRoundMetrics {
    pub round_duration_ms: c_float,
    pub num_participants: c_int,
    pub convergence_rate: c_float,
    pub model_accuracy: c_float,
    pub communication_overhead_mb: c_float,
    pub privacy_budget_consumed: c_float,
    pub aggregation_time_ms: c_float,
}

/// Inference location decision
#[repr(C)]
#[derive(Debug, Clone, Copy, PartialEq)]
pub enum InferenceLocation {
    Edge = 0,   // Execute on edge device
    Cloud = 1,  // Offload to cloud
    Hybrid = 2, // Split execution
}

// External distributed computing functions
extern "C" {
    fn distributed_comm_initialize(
        address: *const c_char,
        port: c_int,
        protocol: CommProtocol,
        comm_handle: *mut *mut c_void,
    ) -> c_int;
    fn distributed_comm_shutdown(comm_handle: *mut c_void);
    fn distributed_join_network(
        comm_handle: *mut c_void,
        coordinator_address: *const c_char,
        coordinator_port: c_int,
        node_info: *const DistributedNode,
    ) -> c_int;
    fn distributed_configure_inference(
        comm_handle: *mut c_void,
        config: *const DistributedInferenceConfig,
    ) -> c_int;
    fn distributed_execute_inference(
        comm_handle: *mut c_void,
        model_id: c_int,
        input_data: *const c_float,
        input_size: usize,
        output_data: *mut c_float,
        output_size: usize,
        metrics: *mut DistributedInferenceMetrics,
    ) -> c_int;
    fn distributed_get_topology(
        comm_handle: *mut c_void,
        nodes: *mut DistributedNode,
        count: *mut c_int,
    ) -> c_int;
    fn federated_configure_learning(
        comm_handle: *mut c_void,
        config: *const FederatedLearningConfig,
    ) -> c_int;
    fn federated_start_round(
        comm_handle: *mut c_void,
        global_model: *const c_float,
        model_size: usize,
        round_number: c_int,
        metrics: *mut FederatedRoundMetrics,
    ) -> c_int;
    fn edge_configure_computing(
        comm_handle: *mut c_void,
        config: *const EdgeComputingConfig,
    ) -> c_int;
    fn edge_decide_inference_location(
        comm_handle: *mut c_void,
        input_size: usize,
        model_complexity: c_float,
        location: *mut InferenceLocation,
    ) -> c_int;
}

#[cfg(test)]
mod tests {
    use super::*;

    #[test]
    fn test_distributed_manager_creation() {
        let manager = DistributedManager::new(1, NodeRole::Worker);
        assert!(manager.is_ok());
    }

    #[test]
    fn test_node_role_values() {
        assert_eq!(NodeRole::Coordinator as c_int, 0);
        assert_eq!(NodeRole::EdgeDevice as c_int, 3);
    }

    #[test]
    fn test_load_balancing_strategies() {
        assert_eq!(LoadBalancingStrategy::RoundRobin as c_int, 0);
        assert_eq!(LoadBalancingStrategy::LatencyBased as c_int, 5);
    }
}
